add kafka messaging service

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,6 +12,18 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: false
+  kafka:
+    bootstrap-servers: localhost:29092
+    consumer:
+      group-id: "test"
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: '*'
 
 logging:
   level:
@@ -46,3 +58,6 @@ management:
     metrics:
       export:
         enabled: true
+
+topic:
+  test: send-test-event
